--- a/index.html
+++ b/index.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Charset and Responsive Viewport -->
     <meta charset="UTF-8" />
-    <title>Badhon's AI Chat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Title and Basic Info -->
+    <title>Badhon's AI Chat - Emul</title>
+    <meta name="description" content="Emul is Badhon's personal AI assistant, inspired by JARVIS from Iron Man. Chat smartly, get things done!" />
+    <meta name="author" content="Badhon Biswas" />
+    <meta name="keywords" content="AI assistant, Emul, JARVIS, Badhon, chatbot, smart assistant" />
+
+    <!-- Favicon (logo.jpeg should be in public/) -->
+    <link rel="icon" type="image/jpeg" href="/logo.png" />
+
+    <!-- Theme color -->
+    <meta name="theme-color" content="#07052b" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Emul - Badhon's AI Assistant" />
+    <meta property="og:description" content="Meet Emul – Badhon's smart AI assistant inspired by JARVIS from Iron Man." />
+    <meta property="og:image" content="https://emul-ai.vercel.app/logo.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://emul-ai.vercel.app" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Emul - Badhon's AI Chatbot" />
+    <meta name="twitter:description" content="Emul is your AI buddy built by Badhon. Think like JARVIS, but for you." />
+    <meta name="twitter:image" content="https://emul-ai.vercel.app/logo.png" />
   </head>
   <body>
     <div id="root"></div>
