--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="keywords" content="AI assistant, Emul, JARVIS, Badhon, chatbot, smart assistant" />
 
     <!-- Favicon (logo.jpeg should be in public/) -->
-    <link rel="icon" type="image/jpeg" href="/logo.png" />
+    <link rel="shortcut icon" href="image/logo.png" type="image/x-icon" />
 
     <!-- Theme color -->
     <meta name="theme-color" content="#07052b" />
