--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Charset and Responsive Viewport -->
+    <!-- Charset and Viewport -->
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Title and Basic Info -->
-    <title>Badhon's AI Chat - Emul</title>
-    <meta name="description" content="Emul is Badhon's personal AI assistant, inspired by JARVIS from Iron Man. Chat smartly, get things done!" />
-    <meta name="author" content="Badhon Biswas" />
-    <meta name="keywords" content="AI assistant, Emul, JARVIS, Badhon, chatbot, smart assistant" />
+    <!-- Favicon and Manifest -->
+    <link rel="icon" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
+    <link rel="manifest" href="/manifest.json" />
 
-    <!-- Favicon (logo.jpeg should be in public/) -->
-    <link rel="shortcut icon" href="image/logo.png" type="image/x-icon" />
-
-    <!-- Theme color -->
+    <!-- Theme Color -->
     <meta name="theme-color" content="#07052b" />
 
+    <!-- Title and Meta Info -->
+    <title>Emul – Badhon's AI Assistant Inspired by JARVIS</title>
+    <meta name="title" content="Emul – Badhon's AI Assistant Inspired by JARVIS" />
+    <meta name="description" content="Emul is Badhon's personal AI assistant, inspired by JARVIS from Iron Man. Chat smartly, get things done!" />
+    <meta name="keywords" content="AI assistant, Emul, JARVIS, Badhon, chatbot, smart assistant, Iron Man AI" />
+    <meta name="author" content="Badhon Biswas" />
+
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Emul - Badhon's AI Assistant" />
-    <meta property="og:description" content="Meet Emul – Badhon's smart AI assistant inspired by JARVIS from Iron Man." />
-    <meta property="og:image" content="https://emul-ai.vercel.app/logo.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://emul-ai.vercel.app" />
+    <meta property="og:title" content="Emul – Badhon's AI Assistant Inspired by JARVIS" />
+    <meta property="og:description" content="Meet Emul – Badhon's personal AI assistant inspired by JARVIS from Iron Man. Smart, responsive, and reliable." />
+    <meta property="og:image" content="https://emul-ai.vercel.app/logo.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Emul - Badhon's AI Chatbot" />
-    <meta name="twitter:description" content="Emul is your AI buddy built by Badhon. Think like JARVIS, but for you." />
+    <meta name="twitter:url" content="https://emul-ai.vercel.app" />
+    <meta name="twitter:title" content="Emul – Badhon's AI Assistant" />
+    <meta name="twitter:description" content="Emul is your personal AI assistant, created by Badhon. Think JARVIS, but for you." />
     <meta name="twitter:image" content="https://emul-ai.vercel.app/logo.png" />
   </head>
   <body>
