--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="/logo.png" />
     <link rel="apple-touch-icon" href="/logo.png" />
     <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
 
     <!-- Theme Color -->
     <meta name="theme-color" content="#07052b" />
